Actualizando el appSettings para PromocionesController

--- a/Michus/appsettings.json
+++ b/Michus/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "cn1": "server=localhost;Database=Michus;Integrated Security=True;TrustServerCertificate=False;Encrypt=False;"
   },
+  "CorreoConfiguracion": {
+    "CorreoOrigen": "josejuliosanchezcruzado1@gmail.com",
+    "ContraseñaCorreo": "povg qncq tphk urnk"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
