--- a/Michus/appsettings.json
+++ b/Michus/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "cn1": "server=localhost;Database=Michus;Integrated Security=True;TrustServerCertificate=False;Encrypt=False;"
+    "cn1": "Server=DESKTOP-5HJ0KJ1\\SQL;Database=Michus;User Id=sa;Password=sql"
   },
   "CorreoConfiguracion": {
     "CorreoOrigen": "josejuliosanchezcruzado1@gmail.com",
