--- a/Michus/appsettings.json
+++ b/Michus/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "cn1": "Server=DESKTOP-5HJ0KJ1\\SQL;Database=Michus;User Id=sa;Password=sql"
+    "cn1": "Server=DESKTOP-5HJ0KJ1\\SQL;Database=Michus;User Id=sa;Password=sql;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
