--- a/Michus/appsettings.json
+++ b/Michus/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionStrings": {
-    "cn1": "Server=DESKTOP-5HJ0KJ1\\SQL;Database=Michus;User Id=sa;Password=sql"
+    "ConnectionStrings": {
+    "cn1": "Server=DESKTOP-M2RHU9G\\SQL2022;Database=Michus;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
