--- a/Michus/appsettings.json
+++ b/Michus/appsettings.json
@@ -1,6 +1,10 @@
 {
   "ConnectionStrings": {
-    "cn1": "Server=DESKTOP-679SILN;Database=Michus;User Id=sa;Password=123456789"
+    "cn1": "Server=DESKTOP-5HJ0KJ1\\SQL;Database=Michus;User Id=sa;Password=sql;TrustServerCertificate=True;"
+  },
+  "CorreoConfiguracion": {
+    "CorreoOrigen": "josejuliosanchezcruzado1@gmail.com",
+    "ContraseñaCorreo": "povg qncq tphk urnk"
   },
   "Logging": {
     "LogLevel": {
